# software-agent-sdk

openhands-sdk/: pyproject.toml
openhands-sdk/openhands/sdk/agent/: agent.py  base.py
openhands-sdk/openhands/sdk/context/: view.py
openhands-sdk/openhands/sdk/context/condenser/: llm_summarizing_condenser.py
openhands-sdk/openhands/sdk/conversation/impl/: local_conversation.py
openhands-sdk/openhands/sdk/tool/builtins/: __init__.py
openhands-tools/: pyproject.toml
openhands-workspace/: pyproject.toml
