[project]
name = "openhands-sdk"
version = "1.0.0a5"
description = "OpenHands SDK - Core functionality for building AI agents"

requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.12.4",
    "httpx==0.28.1",
    "litellm==1.78.0",
    "pydantic==2.12.2",
    "python-frontmatter==1.1.0",
    "python-json-logger==4.0.0",
    "tenacity==9.1.2",
    "websockets==15.0.1",
]

[project.optional-dependencies]
boto3 = ["boto3>=1.35.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.sdk*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.j2"]
